exercise Signed-off-by: tuantrong123 <75593315+tuantrong123@users.noreply.github.com>

--- a/Exercise/Homework/Week1/Lesson2/exercise1/index.html
+++ b/Exercise/Homework/Week1/Lesson2/exercise1/index.html
@@ -11,27 +11,27 @@
 				<td>Price</td>
 			</tr>
 			<tr>
-				<td> <img width="150px" height="160px" src="ảnh/anh1.jpg" alt="loading"></td>
+				<td> <img width="150px" height="160px" src="img/anh1.jpg" alt="loading"></td>
 				<td>orages</td>
 				<td>$1 ea.</td>
 			</tr>
 			<tr>
-				<td> <img width="150px" height="160px" src="ảnh/anh2.jpg" alt="loading"></td>
+				<td> <img width="150px" height="160px" src="img/anh2.jpg" alt="loading"></td>
 				<td>Bananas</td>
 				<td>$0,75/1b</td>
 			</tr>	
 			<tr>
-				<td> <img width="150px" height="160px" src="ảnh/anh3.jpg" alt="loading"></td>
+				<td> <img width="150px" height="160px" src="img/anh3.jpg" alt="loading"></td>
 				<td>Pomegranates</td>
 				<td>3 for $5</td>
 			</tr>
 			<tr>
-				<td> <img width="150px" height="160px" src="ảnh/anh4.jpg" alt="loanding"></td>
+				<td> <img width="150px" height="160px" src="img/anh4.jpg" alt="loanding"></td>
 				<td>Gummy <br> Bears</td>
 				<td>$6 per <br> bag</td>
 			</tr>
 			<tr>
-				<td> <img width="150px" height="160px" src="ảnh/anh5.jpg" alt="loanding"></td>
+				<td> <img width="150px" height="160px" src="img/anh5.jpg" alt="loanding"></td>
 				<td>Broccoli</td>
 				<td>$3 a <br> head</td>
 			</tr>
