--- a/Exercise/Homework/Week2/Lesson2/exercise1/index.html
+++ b/Exercise/Homework/Week2/Lesson2/exercise1/index.html
@@ -19,9 +19,9 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula tincidunt nunc eget varius. Sed consectetur dolor ligula.</p>
 			<h2 style="color: white; font:Courier New">About This Site</h2>
 			<p>Welcome to my in-class home page! As is the case with many webpages, mine is still<i> under construction!</i></p>
-			<p>I created this page in a <a href="https://continuingstudies.stanford.edu/"><img border="0" alt="loading" src="Ảnh/cs.gif" width="179" height="56"></a><a href="http://continuingstudies.stanford.edu/"> Continuing Studies</a>class at<a href="http://www.stanford.edu/"> Stanford University</a>.</p>
+			<p>I created this page in a <a href="https://continuingstudies.stanford.edu/"><img border="0" alt="loading" src="img/cs.gif" width="179" height="56"></a><a href="http://continuingstudies.stanford.edu/"> Continuing Studies</a>class at<a href="http://www.stanford.edu/"> Stanford University</a>.</p>
 			<div style="background-color: yellow;text-align:center ">
-				<img src="Ảnh/su.gif" alt="loading" width="38" height="50">
+				<img src="img/su.gif" alt="loading" width="38" height="50">
 			</div>
 		</div>
 	</body>
