--- a/Exercise/Homework/Week2/Lesson2/exercise2/index.html
+++ b/Exercise/Homework/Week2/Lesson2/exercise2/index.html
@@ -18,7 +18,7 @@
 				</ol>
 				<p style="text-align: center">The website is due Friday, March 28th</p>
 				<div>
-					<img src="Ảnh/image.jpg" width="90px" alt="loading">
+					<img src="img/image.jpg" width="90px" alt="loading">
 				</div>
 			</div>
 			<div class="footer">
