--- a/Exercise/Homework/Week3/Lesson1/exercise1/index.html
+++ b/Exercise/Homework/Week3/Lesson1/exercise1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>HTML Basic</title>
+		<title>Bài 1</title>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
