Submit Signed-off-by: tuantrong123 <75593315+tuantrong123@users.noreply.github.com>

--- a/Exercise/Homework/Week1/Lesson1/exercise5/index.html
+++ b/Exercise/Homework/Week1/Lesson1/exercise5/index.html
@@ -1,22 +1,41 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bai 5</title>
-		<style>body {background: green} </style>
+		<title> Exercise 5 </title>
+		<style>
+			.container {
+				background-color: green;
+			}
+			.heading {
+				color: red;
+			}
+			.headline-about-me {
+				color: white;
+			}
+			.headline-about-site {
+				color: white;
+			}
+			.container-img {
+				background-color: yellow;
+				text-align:center;
+			}
+		</style>
 	</head>
 	<body>
+		<div class="container">
 		<ul>
 			<li>About Me</li>
 			<li>About This Site</li>
 			<li>Footer Stuff</li>
 		</ul>
-		<h1 style="color: red"> STUDENT </h1>
-		<h2 style="color: white"> About Me </h2>
+		<h1 class="heading"> STUDENT </h1>
+		<h2 class="headline-about-me"> About Me </h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Intrger vehicula tincidunt nunc eget varius. Sed consectetur dolor ligula</p>
-		<h2 style="color: white"> About This Site </h2>
+		<h2 class="headline-about-site"> About This Site </h2>
 		<p>Welcome to my in-class home page! As is the case with many webpages, mine is <i>under construction</i></p>
-		<p>I created this my class is <img src="ảnh/cs.gif" alt="loading"><a href="http://continuingstudies.stanford.edu/"> Continuing Studies</a> class at <a href="http://www.stanford.edu/">Stanford University</a></p>
-		<div style="background-color: yellow; text-align:center">
-			<img src=" ảnh/su.gif" alt="loading">
+		<p>I created this my class is <img src="img/cs.gif" alt="cs" height="56px" width="179"><a href="http://continuingstudies.stanford.edu/"> Continuing Studies</a> class at <a href="http://www.stanford.edu/">Stanford University</a></p>
+		<div class="container-img">
+			<img src=" img/su.gif" height="50px" width="30px" alt="su">
 		</div>
 		<p>The website for my class is <a href=" http://www.stanford.edu/group/csp/cs21/"> http://www.stanford.edu/group/csp/cs21/</a></p>
 		<p>Here is a list of thing I have to do for this class:</p>
@@ -28,5 +47,6 @@
 			<li>Get some graphics for my website</li>
 			<li>Create s website (one home page with three linked subsequent pages with content, links, and graphics on each page -- four pages in all) </li>
 		</ol>
+		</div>
 	</body>
 </html>
