--- a/Exercise/Homework/Week1/Lesson1/exercise6/index.html
+++ b/Exercise/Homework/Week1/Lesson1/exercise6/index.html
@@ -1,18 +1,24 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Bai 6 </title>
+	<title> Exersice 6 </title>
+	<style>
+		.label {
+			text-align: center;
+		}
+	</style>
 </head>
 	<body>
-		<h1> HTML Basics</h1>
-		<h2> Intro</h2>
-		<p><strong>HyperText Markup Language,</strong> commonly abbreviated as<strong>HTML,</strong> is the standard markup language used to create web pages.</p>
+		<h1> HTML Basics </h1>
+		<h2> Intro </h2>
+		<p><strong>HyperText Markup Language,</strong> commonly abbreviated as<strong> HTML,</strong> is the standard markup language used to create web pages.</p>
 		<p>Along with CSS, and <a href="#">JavaScript</a>, HTML is a cornerstone technology used to sreate web pages, as well as to create intrefaces for mobile and web app web application</p>
 		<h1>Versionen</h1>
-		<div style="text-align: center">
+		<div class="label">
 			<p>HTML</p>
 			<p>XHTMK</p>
 			<p>HTML5</p>
 		</div>
-		<img width="200px" src="img/anhmang.jpg" alt="loading">
+		<img width="200px" height="300px" src="img/anhmang.jpg" alt="anhmang">
 	</body>
 </html>
