--- a/Exercise/Homework/Week1/Lesson2/exercise1.1/index.html
+++ b/Exercise/Homework/Week1/Lesson2/exercise1.1/index.html
@@ -1,43 +1,48 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bai 1b</title>
-		<style>table {border-collapse: collapse;}
-			table th, td 
-			{border: 1px solid black;}
+		<title>Exercise 1.2</title>
+		<style>
+			table {
+				border-collapse: collapse;
+			}
+			table th, td {
+				border: 1px solid black;
+			}
 		</style>
 	</head>
 		<body>
 			<table>
-			<tr>
-				<td>Item Photo</td>
-				<td>Name</td>
-				<td>Price</td>
-			</tr>
-			<tr>
-				<td> <img width="150px" height="160px" src="img/anh1.jpg" alt="loading"></td>
-				<td>orages</td>
-				<td>$1 ea.</td>
-			</tr>
-			<tr>
-				<td> <img width="150px" height="160px" src="img/anh2.jpg" alt="loading"></td>
-				<td>Bananas</td>
-				<td>$0,75/1b</td>
-			</tr>
-			<tr>
-				<td> <img width="150px" height="160px" src="img/anh3.jpg" alt="loading"></td>
-				<td>Pomegranates</td>
-				<td>3 for $5</td>
-			</tr>
-			<tr>
-				<td> <img width="150px" height="160px" src="img/anh4.jpg" alt="loading"></td>
-				<td>Gummy <br> Bears</td>
-				<td>$6 per <br> bag</td>
-			</tr>
-			<tr>
-				<td> <img width="150px" height="160px" src="img/anh5.jpg" alt="loading"></td>
-				<td>Broccoli</td>
-				<td>$3 a <br> head</td>
-			</tr>
+				<tr>
+					<td>Item Photo</td>
+					<td>Name</td>
+					<td>Price</td>
+				</tr>
+				<tr>
+					<td> <img width="150px" height="160px" src="img/anh1.jpg" alt="hinh1"></td>
+					<td>orages</td>
+					<td>$1 ea.</td>
+				</tr>
+				<tr>
+					<td> <img width="150px" height="160px" src="img/anh2.jpg" alt="hinh2"></td>
+					<td>Bananas</td>
+					<td>$0,75/1b</td>
+				</tr>
+				<tr>
+					<td> <img width="150px" height="160px" src="img/anh3.jpg" alt="hinh3"></td>
+					<td>Pomegranates</td>
+					<td>3 for $5</td>
+				</tr>
+				<tr>
+					<td> <img width="150px" height="160px" src="img/anh4.jpg" alt="hinh4"></td>
+					<td>Gummy <br> Bears</td>
+					<td>$6 per <br> bag</td>
+				</tr>
+				<tr>
+					<td> <img width="150px" height="160px" src="img/anh5.jpg" alt="hinh5 "></td>
+					<td>Broccoli</td>
+					<td>$3 a <br> head</td>
+				</tr>
 			</table>
 		</body>
-	</html>
+</html>
