--- a/Exercise/Homework/Week1/Lesson2/exercise4/index.html
+++ b/Exercise/Homework/Week1/Lesson2/exercise4/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bai 4</title>
-		<style>table {border-collapse: collapse;}
-			table, td 	
-			{border: 2px solid black;}
+		<title>Exercise 4</title>
+		<style>
+			table {
+				border-collapse: collapse;
+			}
+			table, td {
+				border: 2px solid black;
+			}
 		</style>
 	</head>
 	<body>
