--- a/Exercise/Homework/Week2/Lesson2/exercise4/index.html
+++ b/Exercise/Homework/Week2/Lesson2/exercise4/index.html
@@ -1,16 +1,17 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bài 4</title>
+		<title>Exercise 4</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="head">
-			<h1 style="font-size: 50px">Learning JavaScript</h1>
+		<div class="container">
+			<h1 class="heading">Learning JavaScript</h1>
 			<p>for Absolute Beginner</p>
 			<hr>
 		</div><br>
-		<div id="container">
-			<form action="/action_page.php">
+		<div id="container-id">
+			<form action="/action_page.php" method="post">
 			<p>
 			<label>First Name</label>
 				<input type="text"><br>
