--- a/Exercise/Homework/Week1/Lesson2/exercise2/index.html
+++ b/Exercise/Homework/Week1/Lesson2/exercise2/index.html
@@ -1,44 +1,57 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bai 2</title>
+		<title>Exercise 2</title>
+		<style>
+			.heading {
+				color: Purple;
+			}
+			.headline {
+				color: #FF4E5D;
+			}
+		</style>
 	</head>
 	<body>
-	<h1 style= "color: Purple">A Simple Form </h1>
-	<h2 style= "color: #FF4E5D">Form fundamental</h2>
-	<fieldset>
-		<legend>Customer info</legend>
-		<p>
-			<label>Name:</label>
-			<input type="text" placeholder="Enter your name">
-		</p>
-		<p>
-			<label>Telephone:</label>
-			<input type="text" placeholder="Pattern: 1-234-567-8910">
-		</p>
-		<p>
-			<label>E-mail address:</label>
-			<input type="text" placeholder="Enter your email address" size="50px">
-		</p>
-		<p>
-			<label for="Gender" name="Gender"> Gender: </label>
-			<input type="Radio" checked name="Gender" value="male"> Male </input>
-			<input type="Radio" name="Gender" value="Female"> Female </input>
-		</p>
-		<p>
-			<label type="Hobbies" name="Hobbies"> Hobbie: </label>
-			<input type="checkbox"> Basketball</input>
-			<input type="checkbox"> Football</input>
-			<input type="checkbox"> Badminton</input>
-		</p>
-	</fieldset>
-	<fieldset>
+		<h1 class="heading">A Simple Form </h1>
+		<h2 class="headline">Form fundamental</h2>
+		<form action="/action_page.php" method="post">
+		<fieldset>
+			
+				<legend>Customer info</legend>
+				<p>
+					<label>Name:</label>
+					<input type="text" placeholder="Enter your name">
+				</p>
+				<p>
+					<label>Telephone:</label>
+					<input type="text" placeholder="Pattern: 1-234-567-8910">
+				</p>
+				<p>
+					<label>E-mail address:</label>
+					<input type="text" placeholder="Enter your email address" size="50px">
+				</p>
+				<p>
+					<label for="gender" name="gender"> Gender: </label>
+					<input type="radio" checked name="Gender" value="male"> Male </input>
+					<input type="radio" name="Gender" value="Female"> Female </input>
+				</p>
+				<p>
+					<label type="hobbies" name="hobbies"> Hobbie: </label>
+					<input type="checkbox"> Basketball</input>
+					<input type="checkbox"> Football</input>
+					<input type="checkbox"> Badminton</input>
+				</p>
+		
+		</fieldset>
+		<fieldset>
 			<legend>Books</legend>
-		<label> Name: </label>
-		<input type= "text"></input>
-		<label>Quuatity (Maxmum 5)</label>
-		<input type="number" min="1" max="5"></input>
-	</fieldset>
-	<button type="Submit">Submit</button>
-	<button type="Submit">Reset</button> 
+				<label> Name: </label>
+				<input type= "text"></input>
+				<label>Quuatity (Maxmum 5)</label>
+				<input type="number" min="1" max="5"></input>
+		</fieldset>
+		</form>
+		<button type="submit">Submit</button>
+		<button type="submit">Reset</button> 
 	</body>
 </html>
