--- a/Exercise/Homework/Week1/Lesson2/exercise5/index.html
+++ b/Exercise/Homework/Week1/Lesson2/exercise5/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bai 5</title>
-		<style>table, th, td {
-			border: 1px solid black;}
-	  </style>
+		<title>Exercise 5</title>
+		<style>
+			table, th, td {
+				border: 1px solid black;}
+		</style>
 	</head>
 	<body>
 		<h3>Simple form with name age</h3>
