--- a/Exercise/Homework/Week2/Lesson1/exercise1/index.html
+++ b/Exercise/Homework/Week2/Lesson1/exercise1/index.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bai 1</title>
+		<title>Exercise 1</title>
 	</head>
 	<body>
+		<div>
 		<h1>Thanh toán</h1>
 		<form action="/action_page.php" method="post">
-		<p>
 			<label>Tên đầy đủ:</label>
-				<input name type="text" size="50" placeholder="Nhập tên đầy đủ người mua hàng">
+				<input type="text" size="50" placeholder="Nhập tên đầy đủ người mua hàng">
 			<br><br>
 			<label>Password:</label>
 				<input type="password" placeholder="Nhập password">
@@ -19,21 +20,21 @@
 				<input type="date">
 			<br><br>
 			<label>Mặt hàng mua</label>
-					<select id="browser">
-						<option value="Shoes">Shoes</option>
-						<option value="Socks">Socks</option>
-						<option value="Shirt">Sandals</option>
-						<option value="Sandals">Shirt</option>
-						<option value="Trouers">Trouers</option>
-					</select>
+				<select id="browser">
+					<option value="Shoes">Shoes</option>
+					<option value="Socks">Socks</option>
+					<option value="Shirt">Sandals</option>
+					<option value="Sandals">Shirt</option>
+					<option value="Trouers">Trouers</option>
+				</select>
 			<br><br>
 			<label>Số lượng mua</label>
 				<input type="number" min="1" max="5">
-		</p>
-		<p> Bán kính vận chuyển:
-			<input type="range" min="10" max="20">
-		</p>
+			<p> Bán kính vận chuyển:
+				<input type="range" min="10" max="20">
+			</p>
 		</form>
-		<button type="Đăng kí">Đăng kí</button>
+		<button name="button" type="submit">Đăng kí</button>
+		</div>
 	</body>
 </html>
