--- a/Exercise/Homework/Week2/Lesson2/exercise1/index.html
+++ b/Exercise/Homework/Week2/Lesson2/exercise1/index.html
@@ -1,28 +1,29 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bài 1</title>
+		<title>Exercise 1</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<center>
 			<div class="nav">
-			<ul>
-				<li class="color"><a href="#">Aboutme</a></li>
-				<li class="color"><a href="#">About This Site</a></li>
-				<li class="color"><a href="#">Footer Stuff</a></li>
-			</ul>
+				<ul>
+					<li class="color"><a href="#">Aboutme</a></li>
+					<li class="color"><a href="#">About This Site</a></li>
+					<li class="color"><a href="#">Footer Stuff</a></li>
+				</ul>
 			</div>
 		</center>
-			<div>
-			<h1 style="color: red; font: Arial">STUDENT</h1>
-			<h2 style="color: white; font:Courier New">About Me</h2>
+		<div>
+			<h1 class="heading">STUDENT</h1>
+			<h2 class="headline-about-me">About Me</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula tincidunt nunc eget varius. Sed consectetur dolor ligula.</p>
-			<h2 style="color: white; font:Courier New">About This Site</h2>
+			<h2 class="headline-about-site">About This Site</h2>
 			<p>Welcome to my in-class home page! As is the case with many webpages, mine is still<i> under construction!</i></p>
-			<p>I created this page in a <a href="https://continuingstudies.stanford.edu/"><img border="0" alt="loading" src="img/cs.gif" width="179" height="56"></a><a href="http://continuingstudies.stanford.edu/"> Continuing Studies</a>class at<a href="http://www.stanford.edu/"> Stanford University</a>.</p>
-			<div style="background-color: yellow;text-align:center ">
-				<img src="img/su.gif" alt="loading" width="38" height="50">
-			</div>
+			<p>I created this page in a <a href="https://continuingstudies.stanford.edu/"><img border="0" alt="cs" src="img/cs.gif" width="179px" height="56px"></a><a href="http://continuingstudies.stanford.edu/"> Continuing Studies</a> class at <a href="http://www.stanford.edu/"> Stanford University</a>.</p>
+				<div class="container-color">
+					<img src="img/su.gif" alt="su" width="38px" height="50px">
+				</div>
 		</div>
 	</body>
 </html>
