--- a/Exercise/Homework/Week2/Lesson2/exercise5/index.html
+++ b/Exercise/Homework/Week2/Lesson2/exercise5/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Bài 5</title>
+		<title>Exercise 5</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
