Submit Signed-off-by: tuantrong123 <75593315+tuantrong123@users.noreply.github.com>

--- a/Exercise/Homework/Week3/Lesson1/exercise1/index.html
+++ b/Exercise/Homework/Week3/Lesson1/exercise1/index.html
@@ -31,12 +31,12 @@
 			<p>Some of the Earth's grestest landscapes are threatened by inscreased road construction, oil and gas exploration, and mining. We aim to protect these areas from inappropriate development, but we cannot achieve our goals alone. Find out how you can help.</p>
 			</div>
 			<div class="image">
-				<img class="picture_1" src="materials\about.jpg">
-				<img class="picture_2" src="materials\takeaction.jpg">	
+				<img class="picture-about" src="materials\about.jpg">
+				<img class="picture-take-action" src="materials\takeaction.jpg">	
 			</div>
 			<div class="image">
 				<div class="about">
-					<p class="font_1">ABOUT</p>
+					<p class="font-about">ABOUT</p>
 					<p>Find out about organization, mission, our methods, and the results of our decades of advocary.</p>
 				</div>
 				<div class="take">
