--- a/Exercise/Homework/Week4/Lesson1/exercise6/index.html
+++ b/Exercise/Homework/Week4/Lesson1/exercise6/index.html
@@ -19,16 +19,16 @@
 					<form  action="authenticate.php" method="post">
 						<div class="text-center">
 							<div>
-								<span><label for="id" class="text label_1">Email</label><br>
+								<span><label for="id" class="text label">Email</label><br>
 								<input type="Email" class="email-box"></span>
 							</div><br>
 							<div>
-								<label for="password" class="text label_1">Mật Khẩu</label><br>
+								<label for="password" class="text label">Mật Khẩu</label><br>
 								<input id="password" type="password" class="email-box text-center"><br>
 							</div><br>
 							<div>
-								<span class="label_1"><input type="checkbox">Tự Động Đăng Nhập</input></span>
-								<a class="label_2">Quên Mật khẩu?</a>
+								<span class="remember  "><input type="checkbox">Tự Động Đăng Nhập</input></span>
+								<a class="fogot-password">Quên Mật khẩu?</a>
 							</div><br>
 						</div>
 						<div class="text-center">
