Sumit Signed-off-by: tuantrong123 <75593315+tuantrong123@users.noreply.github.com>

--- a/Exercise/Homework/Week4/Lesson1/exercise5/index.html
+++ b/Exercise/Homework/Week4/Lesson1/exercise5/index.html
@@ -11,7 +11,7 @@
 				<div>
 					<div class="label-border">
 						<h3>Tạo CV trong chớp mắt</h3>
-						<p>____________</p>
+						<hr>
 						<p>Tạo CV ấn tượng, chọn từ kho CV mẫu mực thiết kế chuyên nghiệp, bắt mắt</p>
 					</div>
 					<img src="img/photo1.jpg" alt="photo1">			
@@ -25,9 +25,9 @@
 						<input type="password" class="box-text"><br>
 					<label>Mã xác thực*</label><img src="img/code.jpg" alt="anhcode">
 						<input type="text" class="box-text"><br><br>
-					<button class="button_1">Đăng kí mở tài khoản</button><br><br>
+					<button class="button-registration"> Đăng kí mở tài khoản </button><br><br>
 					<p>Bạn đã có tài khoản</p><br>
-					<button class="button_2">Đăng nhập</button>
+					<button class="button-log-in">Đăng nhập</button>
 				</div>
 			</div>
 		</div>
