--- a/Exercise/Homework/Week4/Lesson1/exercise6/index.html
+++ b/Exercise/Homework/Week4/Lesson1/exercise6/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	</head>
 	<body>
-		<div class="container-border">
+		<div class="container">
 			<div class="container-box">
 				<div class="text-center">
 					<h3>Đăng nhập với</h3><br>
@@ -16,7 +16,7 @@
 					<h4>Hoặc</h4>
 				</div>
 				<div>
-					<form  action="authenticate.php" method="post">
+					<form action="/action_page.php" method="post">
 						<div class="text-center">
 							<div>
 								<span><label for="id" class="text label">Email</label><br>
@@ -27,7 +27,7 @@
 								<input id="password" type="password" class="email-box text-center"><br>
 							</div><br>
 							<div>
-								<span class="remember  "><input type="checkbox">Tự Động Đăng Nhập</input></span>
+								<span class="remember"><input type="checkbox">Tự Động Đăng Nhập</input></span>
 								<a class="fogot-password">Quên Mật khẩu?</a>
 							</div><br>
 						</div>
@@ -36,7 +36,7 @@
 						</div><br>
 						<p class="text-center"><a>Bạn chưa có tài khoản?</a></p>
 						<div class="text-center"><br>
-							<input type="submit" value="Đăng kí" class="button-create">
+							<input href="#" value="Đăng kí" class="button-create">
 						</div>
 					</form>
 				</div>
